--- a/htdocs/typo3conf/ext/speciality/Resources/Public/Source/StyleSheets/Sass/main.scss
+++ b/htdocs/typo3conf/ext/speciality/Resources/Public/Source/StyleSheets/Sass/main.scss
@@ -2,11 +2,11 @@
 @import "variables";
 
 // the Twitter Bootstrap!
-@import "../../Components/twbs-bootstrap-sass/vendor/assets/stylesheets/bootstrap";
+@import "../../../Components/twbs-bootstrap-sass/vendor/assets/stylesheets/bootstrap";
 
 // Variables
 // --------------------------
-@import "../../Components/font-awesome/scss/font-awesome";
+@import "../../../Components/font-awesome/scss/font-awesome";
 
 // the website
 @import "mixins";
