--- a/htdocs/typo3conf/ext/speciality/Resources/Private/Partials/SharedResources.html
+++ b/htdocs/typo3conf/ext/speciality/Resources/Private/Partials/SharedResources.html
@@ -7,10 +7,10 @@
 	<f:section name="SharedResources">
 
 
-		<v:asset.style name="main-css" standalone="true" rewrite="false"
+		<v:asset.style name="mainCss" standalone="true" rewrite="false"
 		               path="EXT:speciality/Resources/Public/Build/StyleSheets/site.min.css"/>
 
-		<v:asset.script name="main-js" standalone="true"
+		<v:asset.script name="mainJs" standalone="true"
 		                path="EXT:speciality/Resources/Public/Build/JavaScript/site.min.js"/>
 
 
